--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -32,3 +32,8 @@ body {
      position: absolute;
      z-index: -1;	
 }
+
+<!-- Bootstrap -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap-theme.min.css" rel="stylesheet">
+<link href="css/introHCI.css" rel="stylesheet">
